--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- My own CSS -->
+    <link rel="stylesheet" href="/stylesheets/application.css">
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Kwitter</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application" %>
+    <link rel="stylesheet" href="/stylesheets/application.css">
   </head>
 
   <body>
     <p>
       <% if @current_user %>
         <%= @current_user["first_name"] %>
-        <a href="/logout">Logout</a>
+        <a class="logout-btn" href="/logout">Logout</a>
       <% else %>
-        <a href="/login">Login</a> | <a href="/users/new">Signup</a>
+        <a href="/login">Login</a> | <a class="signup-btn" href="/users/new">🦄 Signup</a>
       <% end %>
     </p>
 
-    <p>
-      <%= flash["notice"] %>
-    </p>
+
+  <p class="flash-notice">
+    <%= flash["notice"] %>
+  </p>
+
 
     <%= yield %>
   </body>
